Let users install Grouper WS SCIM via Grouper Installer